<resources>
    <string name="app_name">Squash Score</string>
    <string name="player_1">Player 1</string>
    <string name="player_2">Player 2</string>
    <string name="score_player_1">0</string>
    <string name="score_player_2">0</string>
    <string name="games_player_1">Games: 0</string>
    <string name="games_player_2">Games: 0</string>
    <string name="add_point_button">+1</string>
    <string name="take_point_button">-1</string>
    <string name="reset_button">Reset</string>
</resources>
