<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.squashscore.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout style="@style/player_layouts">

            <TextView
                style="@style/player_name_style"
                android:text="@string/player_1" />

            <TextView
                android:id="@+id/score_player_1"
                style="@style/score_style"
                android:text="@string/score_player_1" />

            <Button
                android:id="@+id/add_point_button_p1"
                style="@style/score_button_p1_style"
                android:text="@string/add_point_button" />

            <Button
                android:id="@+id/take_point_button_p1"
                style="@style/score_button_p1_style"
                android:text="@string/take_point_button" />

            <LinearLayout style="@style/games_layout_style">

                <Button
                    android:id="@+id/take_game_button_p1"
                    style="@style/game_button_style_p1"
                    android:text="@string/take_point_button"/>

                <TextView
                    android:id="@+id/games_player_1"
                    style="@style/game_text_style"
                    android:text="@string/games_player_1" />

                <Button
                    android:id="@+id/add_game_button_p1"
                    style="@style/game_button_style_p1"
                    android:text="@string/add_point_button" />

            </LinearLayout>

        </LinearLayout>

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="16dp"
            android:layout_marginTop="16dp"
            android:background="@color/colorDivider" />

        <LinearLayout style="@style/player_layouts">

            <TextView
                style="@style/player_name_style"
                android:text="@string/player_2" />

            <TextView
                android:id="@+id/score_player_2"
                style="@style/score_style"
                android:text="@string/score_player_2" />

            <Button
                android:id="@+id/add_point_button_p2"
                style="@style/score_button_p2_style"
                android:text="@string/add_point_button" />

            <Button
                android:id="@+id/take_point_button_p2"
                style="@style/score_button_p2_style"
                android:text="@string/take_point_button" />

            <LinearLayout style="@style/games_layout_style">

                <Button
                    android:id="@+id/take_game_button_p2"
                    style="@style/game_button_style_p2"
                    android:text="@string/take_point_button" />

                <TextView
                    android:id="@+id/games_player_2"
                    style="@style/game_text_style"
                    android:text="@string/games_player_2" />

                <Button
                    android:id="@+id/add_game_button_p2"
                    style="@style/game_button_style_p2"
                    android:text="@string/add_point_button" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/reset_button"
        style="@style/reset_button_style"
        android:text="@string/reset_button" />

</RelativeLayout>
